Erste Korrekturen von Herr Thalmann angepasst

--- a/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
+++ b/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
@@ -19,7 +19,7 @@ beschwert, und die Verschiebung x gemessen.
 		3kg & 3 mm\\
 	\end{tabular}
 	\centering
-	\caption{Prinzip der k-Bestimmung}
+	\caption{Resultat der k-Bestimmung}
 	\label{tab:BallKompErgebnis}
 \end{table}
 
