--- a/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
@@ -5,7 +5,7 @@ eine genug gute Festigkeit aufweist. Dies ist nötig, da das Gewicht direkten Ei
 Bewertung hat. Eine weitere Voraussetzung an das Material ist, dass die Lager der einzelnen Achsen
 direkt in die Platte gepresst werden können. Dadurch kann das Gewicht der Konstruktion weiter
 optimiert werden. Um die unterschiedlichen Materialien auf ihre Fähigkeiten zu überprüfen, sind
-verschiedene Tests durchgeführt worden. Unter anderem wurden testweise verschieden grosse Kugellager
+verschiedene Tests durchgeführt worden. Unter anderem wurden verschieden grosse Kugellager
 in ein Acrylglas gepresst. Die befürchtete Gefahr, dass sich das Acrylglas bei einer zu hohen
 Presskraft spaltet, bestätigte sich nicht. Da Aluminium eine viel grössere Festigkeit als die
 anderen in Frage kommenden Werkstoffe hat, zugleich jedoch eine viel höhere Dichte hat, kann die
