--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -5,7 +5,7 @@ beschleunigt werden. Deshalb hat die Zuführung der Bälle in Abständen zu erfo
 einzelnen Tennisbälle immer mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen, damit
 eine konstante Wurfweite entsteht. Die beste Art, beides zusammen zu realisieren ist ein Förderband.
 Das Förderband wird zwischen den zwei Acrylglasplatten aufgespannt. Der Antrieb des Förderbandes
-erfolgt mit einem DC-Motor. Dieser wird mit einem Verhältnis von $i=5:1$ übersetzt, um das benötigte
+erfolgt mit einem DC-Motor. Dieser wird mit einem Verhältnis von $i=5:1$ untersetzt, um das benötigte
 Drehmoment an die Antriebstrommel zu übertragen. Die Berechnungen dazu sind im Anhang in Formel
 \ref{equ:DrehmomentFörderband} ff. ersichtlich. Auf dem Förderband, welches aus einem
 Flachbandriemen besteht, sind konvexe Führungsschaufeln angebracht. Diese sind so ausgerundet, damit
