--- a/Dokumentation/Enddokumentation/Loesungskonzept/Versorgungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Versorgungskonzept.tex
@@ -1,2 +1,10 @@
 \subsection{Versorgungskonzept}
-	Das Smartphone, die Controller-Hardware und die Motoren benötigen jeweils bestimmte Spannungen, die erzeugt werden müssen. Diese werden aus einer Hauptspannung generiert. Die Spannung kann von Akkumulatoren oder einem externen Netzgerät bezogen werden. Da das Gewicht der Spannungsversorgung beim Wiegen nicht dazu gezählt wird, könnten Akkumulatoren allenfalls als Ballastgewicht eingesetzt werden. Sollte sich zeigen, dass zusätzliches Gewicht nötig ist um den Ballwerfer zu stabilisieren, werden Akkumulatoren eingesetzt. Ansonsten wird die benötigte Spannung von einem Netzgerät bezogen. Der benötigte Strom ist massgeblich vom Brushless-Motor abhängig. der  Strombedarf der Controller-Hardware kann im Vergleich des Motors vernachlässigt werden.
+	Das Smartphone, die Controller-Hardware und die Motoren benötigen jeweils bestimmte 
+	Spannungen, die erzeugt werden müssen. Diese werden aus einer Hauptspannung generiert. 
+	Diese kann von Akkumulatoren oder einem externen Netzgerät bezogen werden. Da das 
+	Gewicht der Spannungsversorgung beim Wiegen nicht dazu gezählt wird, könnten Akkumulatoren 
+	allenfalls als Ballastgewicht eingesetzt werden. Sollte sich zeigen, dass zusätzliches 
+	Gewicht nötig ist um den Ballwerfer zu stabilisieren, werden Akkumulatoren eingesetzt. 
+	Ansonsten wird die benötigte Spannung von einem externen Netzgerät bezogen. Der benötigte 
+	Strom ist massgeblich vom Brushless-Motor abhängig. Der  Strombedarf der Controller-Hardware 
+	kann im Vergleich des Motors vernachlässigt werden.
