--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -1,4 +1,4 @@
-\subsection{Kosten}
+\subsection{Budget}
     \begin{longtable}{p{1.7cm}rllcc}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
     & \textbf{Total} \\
