--- a/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
@@ -6,8 +6,8 @@
 	\rule{0pt}{11pt}\textit{Tester}:          & Matteo, Pascal\\
 	\rule{0pt}{11pt}\textit{Ziel des Testes}: & Lassen sich Wälzlager in Acrylglas (PMMA) einpressen und halten sie den herrschenden Druck stand? Verhalten, Möglichkeiten von Bohrungen in 5mm Acrylglas.   \\
 	\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Beim ersten Versuch sind Spannungsrisse aufgetreten (siehe Pfeil in Abbildung \ref{abb:LagerPlexiglas}). 
-	Um dem entgegenzuwirken, wurde in einem zweiten Versuch die 16mm Bohrung mit 
-	Schleifpapier gering vergrössert, damit sich das Lager leichter einpressen lässt. 
+	Um dem entgegenzuwirken, wurde in einem zweiten Versuch die $16 mm$ Bohrung mit 
+	Schleifpapier geringfügig vergrössert, damit sich das Lager leichter einpressen lässt. 
 	Die Kräfte, die durch das Lager aufgenommen werden können, sind nun zwar 
 	geringer, allerdings für den geplanten Einsatzbereich immer noch genügend. 
 	Durch diese Methode treten auch keine Spannungsrisse mehr auf. \newline	
