Weitere Korrekturen von Hr Thalmann

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
@@ -1,3 +1,3 @@
 \section{Lösungskonzept}
 Als Hauptteil der Arbeit umfasst das Lösungskonzept Beschreibungen von erfüllten Funktionen und verbauten Komponenten, sowie 
-grundlegende Berechnungen für den autonomen Ballwerfer. Die Strukturierung des Abschnitts 3.2 erfolgt dabei in der Reihenfolge, in welcher die Komponenten zur Lösung der Aufgabe benötigt werden.
+grundlegende Berechnungen für den autonomen Ballwerfer. Die Strukturierung des Kapitels \ref{shap:Geraeteuebersicht} erfolgt dabei in der Reihenfolge, in welcher die Komponenten zur Lösung der Aufgabe benötigt werden.
