--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -1,4 +1,5 @@
 \subsection{Geräteübersicht}
+\label{shap:Geraeteuebersicht}
 Der Ballwerfer ist so konzipiert, das er aus einem fix stehenden Basismodul besteht, 
 welches in der Mitte des Startbereiches positioniert wird. Die Abwurfeinheit, 
 welche den Ballwurfmechanismus und die Ballzuführung beinhaltet, ist auf dem Basismodul drehend gelagert. 
