--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -17,7 +17,7 @@
 	%
 	\paragraph{Korberkennung}$~~$\vspace{2mm}\\
 		Für die Bestimmung der Position des Korbes wurde ein Algorithmus entwickelt und in Java implementiert. Dieser ist in Abbildung \ref{fig:KorberkennungFlowchart} grafisch dargestellt.
-		Der Algorithmus bedient sich des Umstandes, dass der Korb deutlich dunkler als der Hintergrund ist. 
+		Der Algorithmus basiert auf der Tatsache, dass der Korb deutlich dunkler als der Hintergrund ist. 
 		Um mit dem von der Kamera zuvor aufgenommenen Bild arbeiten zu können, müssen die Ränder abgeschnitten werden 
 		(vor allem links und rechts geht der Bildbereich über das Spielfeld hinaus, was das Resultat verfälschen könnte). 
 		Als zweiter Schritt wird über sämtliche Pixel des Bildes iteriert. Dabei wird für jedes Pixel die Helligkeit bestimmt 
