--- a/Dokumentation/Enddokumentation/Schluss/Schluss.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Schluss.tex
@@ -1,6 +1,6 @@
 \section{Schlussdiskussion}
 In einer ersten Phase wurde die Aufgabenstellung in Teilprobleme zerlegt. Für diese partiellen 
-Probleme konnte anschliessend nach bestehenden Lösungen recherchiert werden, welche wiederum 
+Probleme konnten anschliessend nach bestehenden Lösungen recherchiert werden, welche wiederum 
 eine Bewertung erhielten und in unterschiedlichen Konstellationen mehrere Grobkonzepte bildeten.\\
 \\
 Bei der Schaffung der Grobkonzepte mussten einige Grundprobleme angegangen werden. So wurde 
