--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
@@ -5,11 +5,6 @@
 \subsubsection{Encoder \& Drehzahlgeber}
 \fi
 
-Die vorgesehenen Motorfunktionen verlangen lediglich beim Brushlessmotor
-nach einem Feedback über die Rotation des Motors, da der Schrittmotor
-definiert und fein granuliert betrieben wird. Der Gleichstrommotor stellt
-keinerlei Ansprüche, weder an die Drehzahl, noch an die Position.
-
 Encoder sind relativ teuer und der Einsatz des Brushlessmotors verlangt
 lediglich nach einem Feedback zur Rotation beziehungsweise Winkelgeschwindigkeit.
 Die absolute oder relative Position ist für die Anwendung nicht von
@@ -75,6 +70,7 @@ Risiko für mechanische Unwucht des Rotationskörpers.
 \subsection{Magnetischer Drehzahlgeber}
 \fi
 \ifEMBED
+\newpage
 \paragraph{Magnetischer Drehzahlgeber}$~~$\vspace{2mm}\\
 \fi
 Um einen eigenen magnetischen Drehzahlgeber zu erstellen wird ein
