--- a/Dokumentation/Enddokumentation/ET_Gruppe/common/Hardwarezusammenarbeit.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/common/Hardwarezusammenarbeit.tex
@@ -3,14 +3,15 @@
 \fi
 \ifEMBED
 \subsubsection{Fachgruppe Elektrotechnik}
+\label{chap:Fachgruppe Elektrotechnik}
 \fi
 Die Elektrotechnik-Studierenden aus mehreren Gruppen haben sich
 zusammengeschlossen um gemeinsame Probleme anzugehen. Dabei handelt es sich
 um die benötigte Hard- und Software, um Motoren anzusteuern
 und gegebenenfalls zu regeln. In diesem Zusammenschluss wurden drei Gruppen
 gebildet, um Lösungen für DC-, Stepper- und Brushless-Motoren auszuarbeiten.
-Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem wo
-möglich denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert,
+Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem
+denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert,
 Synergien nutzt um eine bessere Lösung zu erarbeiten. Auf diese Weise kann
 das Team übergreifende Arbeiten im Rahmen der PREN erlernt und
 geübt werden. Somit wird Idee der Interdisziplinarität im erweiterten Sinn
