--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -5,7 +5,7 @@ der Wurfmaschine sehr einfach angepasst werden kann, können alle Varianten einf
 Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den
 Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigte Übersetzung realisiert werden kann, ist
 nur mit zusätzlichen Achsen realisierbar. Auch müssen die Zahnräder einen genügen grossen Durchmesser
-haben, damit beide Schwungräder angetrieben werden können. Dadurch fällt sofort viel Gewicht an. Bei der
+haben, damit beide Schwungräder angetrieben werden können. Dies erhöht das Gewicht des Antriebsstrangs. Bei der
 zweiten Variante B, wird das Drehmoment je Schwungrad seperat von einem Motor zur Verfügung gestellt.
 Hier braucht es keine komplexe Übersetzung und das verfügbare Drehmoment pro Schwungrad ist doppelt
 so gross. Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels eines
