--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -17,7 +17,7 @@ Schwungräder kommen. Die Schaufeln werden voraussichtlich mit dem Förderband v
 	{Enddokumentation/Loesungskonzept/Bilder/Foerderband.jpg}
 	\caption{Grafik Förderband}
 	\label{fig:Grafik Förderband}	
-\end{figure}
+\end{figure}\\\\
 Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder
 zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen
 Schwungrades gefördert und anschliessend in einem 45$^\circ$ Winkel nach oben zugeführt werden. Dazu dient
