--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -3,13 +3,14 @@
 Der Ballwerfer ist so konzipiert, das er aus einem fix stehenden Basismodul besteht, 
 welches in der Mitte des Startbereiches positioniert wird. Die Abwurfeinheit, 
 welche den Ballwurfmechanismus und die Ballzuführung beinhaltet, ist auf dem Basismodul drehend gelagert. 
-Ein Schrittmotor richtet die Abwurfeinheit auf das Ziel aus. Der ganze Aufbau des Ballwurfmechanismus ist möglichst einfach gehalten. 
+Ein Motor richtet die Abwurfeinheit auf das Ziel aus. Der ganze Aufbau des Ballwurfmechanismus ist möglichst einfach gehalten. 
 Er besteht hauptsächlich aus zwei Acrylglasplatten, in welcher alle mechanischen Vorrichtungen gelagert sind. 
 Dadurch kann der ganze Aufbau schnell und einfach angepasst oder geändert werden. 
-Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Schrittmotor, welcher in der drehenden Abwurfeinheit angebracht ist. 
+Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Motor, welcher in der drehenden Abwurfeinheit angebracht ist. 
 Dadurch kann die Bauhöhe des Ballwerfers tief gehalten werden, was einen grossen Stabilitätsvorteil bietet. 
 Die Drehachse der Abwurfeinheit ist an der Spitze des Ballwerfers mit einem Bolzen angebracht. 
 Somit bleibt die Abwurfposition der Tennisbälle konstant am gleichen Ort.\\
+\\
 Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder drehen gegenläufig, 
 der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erfolgt mit einem eigens gesteuerten Förderband. 
 Das Förderband muss die Bälle mit konstanter Geschwindigkeit zu den Schwungrädern transportieren, 
@@ -33,7 +34,7 @@ Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewä
 			Fotografieren, Auswerten und Steuern des Controllers \\ 
 			  \rule{0pt}{11pt}     3 & Controller & Steuerung und Regelung der Antriebe \\ 
 			  \rule{0pt}{11pt}     4 & Gestell & Stabilisieren des Systems,	seitliche Führung der Bälle \\ 
-			   \rule{0pt}{11pt}    5 & Stelleinheit & Ausrichten des Gerätes zum Korb \\ 
+			   \rule{0pt}{11pt}    5 & Horizontale\newline Ausrichteinheit & Ausrichten des Gerätes zum Korb \\ 
 			   \rule{0pt}{11pt}    6 & Förderband & Ballförderung zu den Schwungräder \\ 
 			   \rule{0pt}{11pt}    7 & Schwungräder & Beschleunigen der Bälle \\ 
 		\end{tabular} 
