--- a/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
@@ -10,22 +10,22 @@ Schwungradantrieb wurde aus mehreren Gründen gewählt. Über die Drehzahl, Kraf
 durch Übersetzungen lässt sich die Geschwindigkeit der Bälle nahezu stufenlos einstellen. Man kann
 durch vorhergehende Berechnungen die ungefähren Grössen, Leistungen und Kräfte eruieren und das
 System so auslegen, dass später nur noch Parameter geändert werden müssen ohne kostspielige Bauteile
-anzupassen oder gar zu ersetzten. Weiter ist durch die konkave Form der Schwungräder die Flugbahn
-der Bälle vorgegeben. Hier wird keine zusätzliche Ballführung gebraucht was Gewicht, Kosten und
+anzupassen oder gar zu ersetzten. Weiter ist durch die konkave Form der Schwungräder die Richtung der 
+Ballflugbahn vorgegeben. Hier wird keine zusätzliche Ballführung gebraucht was Gewicht, Kosten und
 Platz spart. Die Räder sind konkav ausgearbeitet, so dass die Beschleunigung nicht nur über einen
 Punkt übertragen wird. So wird gewährleistet, dass die Kraft über eine grössere Fläche
 übertragen werden kann. Dadurch entsteht der Vorteil, dass die Beschleunigung geführt
 abläuft, wodurch ein gerichteter Wurf entsteht. So kann die vorhandene Rotationsenergie vollumfänglich 
-den Tennisbällen übergeben werden. Die Ausrundung wurde durch den Radius der Balle
+den Tennisbällen übergeben werden. Die Ausrundung wird durch den Radius der Bälle
 gegeben. Der Durchmesser der Schwungräder ist so festgelegt, dass mit der vorhandenen Masse ein
 genügendes Trägheitsmoment zur Verfügung steht. Dies ist nötig, damit bei der Beschleunigung der
 Tennisbälle die Schwungräder nicht zu stark abgebremst werden. Dennoch sollten sie nicht zu schwer
 oder zu gross sein, da das Gewicht einer der Faktoren in der Gesamtbewertung ist. Die Grösse beruht
-deshalb auf einen Kompromiss. Durch den Durchmesser wird auch die Winkelgeschwindigkeit
+deshalb auf einem Kompromiss. Durch den Durchmesser wird auch die Winkelgeschwindigkeit
 festgelegt. Die Schwungräder sind aus PVC\footnote{\textbf{P}oly\textbf{V}inyl \textbf{C}hlorid}
 gefertigt. Dieser Werkstoff ist einfach zu bearbeiten und bietet zugleich eine genügend grosse
 Festigkeit. Die Räder sind mit einer speziellen Haftmatte beschichtet, damit die Kraft optimal auf
-den Ball übertragen werden kann. Somit wird ein höherer Haftreibungskoeffizient erreicht der ein
+den Ball übertragen werden kann. Somit wird ein höherer Haftreibungskoeffizient erreicht, der ein
 Durchrutschen der Bälle verhindert. Die Schwungräder besitzen grosses Optimierungspotential,
 da die vorhandene Rotationsenergie der entscheidende Faktor ist. Die Achsen der zwei Schwungräder
 sind im Winkel von 45$^\circ$ zur Bodenplatte angeordnet. Der Abschusswinkel ist so gewählt, dass die
