--- a/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
@@ -1,4 +1,4 @@
-\subsubsection{Horizontale Ausrichtung} %\subsubsection{Stelleinheit}
+\subsubsection{Horizontale Ausrichteinheit} %\subsubsection{Stelleinheit}
 Um die Abwurfeinheit zum Ziel auszurichten, wird ein verstellbarer Mechanismus benötigt, der eine hohe Genauigkeit aufweist. Der Drehpunkt muss sich möglichst unter den Schwungrädern befinden, damit die 
 Position des Abwurfes im Zentrum des Spielfeldes bleibt. Die Drehung wird mit einen Schrittmotor
 realisiert. Ein Schrittmotor bietet sich hier an, da somit eine sehr exakte Ansteuerung gewährleistet
@@ -12,7 +12,7 @@ kann. Der Schrittmotor ist nach dem folgenden Drehmoment von ca. $2 Nmm$ ausgele
 da nur der Reibungskoeffizient und die Normalkraft, welche vom Gewicht der Abwurfeinheit abhängt, das
 Moment erzeugen. Der Reibungskoeffizient wird durch die Lagerung klein gehalten. Die Lagerung erfolgt
 im Drehzentrum durch eine Hülse und im Endbereich der Abwurfeinheit durch zwei Kugelrollen, welche mit
-einem seitlichen Abstand angebracht sind. Dadurch kann ein Auflagefläche verbreitert werden, das allfälliges kippen der Abwurfeinheit verhindert. Die Ansteuerung der Schrittmotoren erfolgt über den selbst konstruierten Controller, der in der schwarzen Box, siehe Abbildung \ref{fig:GrafikDesAntriebes}, untergebracht ist.
+einem seitlichen Abstand angebracht sind. Dadurch wird die Auflagefläche verbreitert und das allfällige Kippen der Abwurfeinheit verhindert. Die Ansteuerung der Schrittmotoren erfolgt über den selbst konstruierten Controller, der als schwarzen Box in Abbildung \ref{fig:GrafikDesAntriebes} dargestellt ist.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.9\textwidth,clip,trim=0mm 0mm 0mm 0mm]
