--- a/Dokumentation/Enddokumentation/Loesungskonzept/Versorgungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Versorgungskonzept.tex
@@ -1,5 +1,5 @@
 \subsection{Versorgungskonzept}
-	Das Smartphone, die Controller-Hardware und die Motoren benötigen jeweils bestimmte 
+	Das Smartphone, die Controller-Hardware und die Motoren benötigen unterschiedliche 
 	Spannungen, die erzeugt werden müssen. Diese werden aus einer Hauptspannung generiert. 
 	Diese kann von Akkumulatoren oder einem externen Netzgerät bezogen werden. Da das 
 	Gewicht der Spannungsversorgung beim Wiegen nicht dazu gezählt wird, könnten Akkumulatoren 
