--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -1,4 +1,5 @@
 \subsection{Budget}
+	Im PREN2 steht dem Team ein Budget von Fr. 600.- zur Verfügung. Damit dieses eingehalten werden kann, wurden die voraussichtlichen Beschaffungskosten in der Tabelle \ref{tab:Kostentabelle} aufgelistet. Standardisierte Rohmaterialen wie Rundteile, Profile, Widerstände und dergleichen, stehen an der Hochschule Luzern kostenlos zur Verfügung.
     \begin{longtable}{p{1.7cm}rllcc}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
     & \textbf{Total} \\
@@ -45,6 +46,6 @@
                &       & \textbf{Total:} & \textbf{} & \textbf{ Fr. 424.68 }    \\
                &       &                              &            &            \\
                
-       \caption{Kostentabelle}
+       \caption{Budgettabelle}
        \label{tab:Kostentabelle}
     \end{longtable}
