--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -1,2 +1,3 @@
 \subsection{Brushless-Motor}
+	Dieser Test wurde in der PREN-ET-Gruppe durchgeführt. Dabei handelt es sich um einen komplexeren und grösserern Aufbau.
     \input{\EtPath/Testbericht}
