--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -34,8 +34,8 @@ wurden vier Varianten während einer Diskussionsrunde festgelegt.
 		\label{fig:Grobkonzept}
 	\end{figure}
 \end{landscape}
-\noindent Die blaue Variante ist die Kombination aller Lösungsansätze mit der höchsten
-Prozentzahl. Die rote Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen,
+\noindent Die blaue Variante ist die Kombination mit den jeweils bestbewerteten Teillösungen (höchste Prozentzahl).
+ Die rote Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen,
 das Gerät parallel zur Spielfeldwand zu verschieben und den Korb mit einer Smartphone-Kamera zu
 erkennen. Der Ballwerfer soll durch einen Akkumulator mit Energie versorgt werden. Als
 Ausgangslage führt die grüne Variante die Bälle in einem Drehkranz und befördert diese einzeln
