--- a/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
+++ b/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
@@ -1,12 +1,14 @@
 \subsection{Berechnung}
+\subsubsection{Bestimmung Drehmoment Schwungradantrieb}
+\label{BestimmungDrehmomentSchwundrad}
+%
 Um einen Ball durch die Schwungräder mit einem gewissen Anpressdruck zu führen, wird ein
-Drehmoment benötigt. Dazu wird der Tennisball als eine Feder mit der Federkonstante k betrachtet. Zur Ermittlung von k wurde der Ball mit einer Masse m
-beschwert, und die Verschiebung x gemessen.
+Drehmoment benötigt. Dazu wird der Tennisball als eine Feder mit der Federkonstante $k$ betrachtet. Zur Ermittlung von $k$ wurde der Ball mit einer Masse $m$ beschwert, und die Verschiebung $x$ gemessen.
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.6\textwidth]{Enddokumentation/Anhang/Bilder/KompressionBaelle.png}
-	\caption{Bestimmung von k}
+	\caption{Prinzip der $k$-Bestimmung}
 	\label{fig:BallKomp}
 \end{figure}
 
@@ -14,12 +16,12 @@ beschwert, und die Verschiebung x gemessen.
 	\begin{tabular}{p{1.5cm}p{1.7cm}}
 		Gewicht & Auslenkung\\
 		\hline
-		1kg & 1 mm\\
-		2kg & 2 mm\\
-		3kg & 3 mm\\
+		$1 kg$ & $1 mm$\\
+		$2 kg$ & $2 mm$\\
+		$3 kg$ & $3 mm$\\
 	\end{tabular}
 	\centering
-	\caption{Resultat der k-Bestimmung}
+	\caption{Resultat der $k$-Bestimmung}
 	\label{tab:BallKompErgebnis}
 \end{table}
 
@@ -41,7 +43,7 @@ wird mit trigonometrischer Beziehung hergeleitet.
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.4\textwidth]{Enddokumentation/Anhang/Bilder/PrinzipKompression.png}
+	\includegraphics[width=1\textwidth]{Enddokumentation/Anhang/Bilder/PrinzipKompression.png}
 	\caption{Prinzip der Kompression}
 	\label{fig:PrinzipBallKomp}
 \end{figure}
