--- a/Dokumentation/Enddokumentation/Loesungskonzept/Softwarearchitektur.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Softwarearchitektur.tex
@@ -22,7 +22,7 @@
 		
 
 		\paragraph{ControllerCommunication}$~~$\vspace{2mm}\\
-		Wie der Name bereits sagt wird an dieser Stelle die Kommunikation mit dem FTDI\footnote{Bezeichnung für einen USB to Serial Chip, FTDI ist der Hersteller Name}-Controller realisiert. Der vom Detektor berechnete Winkel wird hier an den FTDI-Controller übertragen. Anschliessend wartet die Komponente bis der Controller ein Endsignal zurückgibt welches das Ende des Ballwurfs signalisiert.
+		Wie der Name bereits sagt wird an dieser Stelle die Kommunikation mit dem FTDI-Controller realisiert. Der vom Detektor berechnete Winkel wird hier an den FTDI-Controller übertragen. Anschliessend wartet die Komponente bis der Controller ein Endsignal zurückgibt welches das Ende des Ballwurfs signalisiert.
 		
 	\subsubsection{Schnittstellen-Spezifikation}
 		% Übersicht Schnittstellen fehlt Schnittstellen
